<resources>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>

    <string name="selected_date">Selected Date:</string>
</resources>
